# teleping

./: .gitignore  README.md  pyproject.toml  telephant-localhost.yml  telephant.yml  teleping.service  teleping.yml
src/telephant/: __init__.py  basic.py  common.py  config.py  ping.py  prometheus.py  traceroute.py  udpping.py  udppingold.py  udpsmoke-async.py  udpsmoke.py  webui.py
src/telephant/templates/: base.html.j2  message.html.j2  udpping.html.j2
src/teleping/: __init__.py  common.py  config.py  udpping.py  webui.py
src/teleping/templates/: base.html.j2
src/webcrud/: __init__.py
src/webcrud/templates/: form.html.j2  sse.html.j2  table.html.j2  testpage.html.j2
