[tool.poetry]
name = "telephant"
version = "0.2.0"
description = "Network Engineer's best friend - Telephant"
authors = ["Tomas Hlavacek <tmshlvck@gmail.com>"]
readme = "README.md"
include = ["telephant/templates", "webcrud"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sse-starlette = "^2.0.0"
dominate = "^2.9.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
requests = "^2.31.0"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
telephant = "telephant:main"
